--- a/style/pages/_details.scss
+++ b/style/pages/_details.scss
@@ -1,4 +1,10 @@
 .page-details {
+    h5 {
+        font-weight: normal;
+        font-size: 18px;
+        color: #0c0d36;
+
+    }
     .store-gallery {
         margin-top: 20px;
     
@@ -47,5 +53,28 @@
       font-size: 16px;
       line-height: 180%;
       color: #525252;
+  }
+  .store-riview {
+        .media {
+            img {
+                max-width: 50px;
+            }
+        }
+
+      .media-body{
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 180%;
+        color: #525252;
+        margin-bottom: 20px;
+   
+      h5 {
+          font-weight: normal;
+          font-size: 16px;
+        
+          color: #0c0d36;
+      }
+     }
+
   }
 }
