--- a/style/_navbar.scss
+++ b/style/_navbar.scss
@@ -18,7 +18,7 @@
       max-height: 45px;
     }
   
-    .cart-badge {
+    .card-badge {
       display: inline-block;
       min-width: 2em; /* em unit */
       padding: 0.3em; /* em unit */
