Login dan register jadi cokkk alhamdulillah

--- a/style/main.scss
+++ b/style/main.scss
@@ -8,6 +8,8 @@
 @import "pages/details";
 @import "pages/cart";
 @import "pages/success";
+@import "pages/auth";
+
 
 @import "components/categories";
 @import "components/products";
