--- a/style/main.scss
+++ b/style/main.scss
@@ -9,10 +9,13 @@
 @import "pages/cart";
 @import "pages/success";
 @import "pages/auth";
+@import "pages/dashboard";
 
 
 @import "components/categories";
 @import "components/products";
 @import "components/breadcrumbs";
+@import "components/card";
+@import "components/card_list";
 
 @import "transitions/slide-fade";
