Halaman dashboard transaction

--- a/style/pages/_dashboard.scss
+++ b/style/pages/_dashboard.scss
@@ -102,5 +102,22 @@
             line-height: 24px;
             color: #9191a9;
         }
+
+        .nav-pills {
+            .nav-link {
+                font-weight: normal;
+                font-size: 18px;
+                color: #9191a9;
+                border-radius: 0;
+                
+                &.active {
+                    font-weight: 500;
+                    font-size: 18px;
+                    color: #0c0d36;
+                    border-bottom: 2px solid #0c0d36;
+                    background: none;
+                }
+            }
+        }
     }
 }
