Menambahkan detail product dan transaksi dan selesai yeaayy

--- a/style/main.css
+++ b/style/main.css
@@ -11248,6 +11248,21 @@ footer p {
   color: #9191a9;
 }
 
+.page-dashboard .section-content .product-title {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 25px;
+  color: #c5c5c5;
+}
+
+.page-dashboard .section-content .product-subtitle {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  color: #0c0d36;
+  margin-bottom: 20px;
+}
+
 .page-dashboard .section-content .nav-pills .nav-link {
   font-weight: normal;
   font-size: 18px;
@@ -11261,6 +11276,13 @@ footer p {
   color: #0c0d36;
   border-bottom: 2px solid #0c0d36;
   background: none;
+}
+
+.page-dashboard .section-content .gallery-container .delete-gallery {
+  display: block;
+  position: absolute;
+  top: -10px;
+  right: 0px;
 }
 
 .component-categories {
