--- a/style/pages/_dashboard.scss
+++ b/style/pages/_dashboard.scss
@@ -102,6 +102,19 @@
             line-height: 24px;
             color: #9191a9;
         }
+        .product-title {
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 25px;
+            color: #c5c5c5;
+        }
+        .product-subtitle {
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 30px;
+            color: #0c0d36;
+            margin-bottom: 20px;
+        }
 
         .nav-pills {
             .nav-link {
@@ -119,5 +132,14 @@
                 }
             }
         }
+        .gallery-container {
+            .delete-gallery {
+                display: block;
+                position: absolute;
+                top: -10px;
+                right: 0px;
+            }
+        }
     }
+   
 }
